--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <springframework.version>5.0.6.RELEASE</springframework.version>
+    <springframework.version>5.3.0</springframework.version>
     <hibernate.version>5.4.1.Final</hibernate.version>
-    <mysql.connector.version>5.1.45</mysql.connector.version>
-    <c3po.version>0.9.5.2</c3po.version>
+    <mysql.connector.version>8.0.28</mysql.connector.version>
+    <c3po.version>0.9.5.5</c3po.version>
 
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.5</version>
+      <version>2.12.6.1</version>
     </dependency>
 
     <!-- Hibernate -->
@@ -71,20 +71,20 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
+      <version>4.0.1</version>
     </dependency>
 
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
-      <version>2.3.1</version>
+      <version>2.3.3</version>
     </dependency>
 
     <!-- to compensate for java 9 not including jaxb -->
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
-      <version>2.3.0</version>
+      <version>2.3.1</version>
     </dependency>
 
   </dependencies>
