--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -2,7 +2,7 @@
 # JDBC connection properties
 #
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false&serverTimezone=UTC
 jdbc.user=bestuser
 jdbc.password=bestuser
 
@@ -19,4 +19,4 @@ connection.pool.maxIdleTime=3000
 #
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.packagesToScan=com.dzmitry.springdemo.entity
+hibernate.packagesToScan=com.dzmitry.entity
